FallCPS310-Labs/Martinez-Section01-lab-09-B/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Users/Adriel14/Library/Mobile Documents/com~apple~CloudDocs/College/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Users/Adriel14/Library/Mobile Documents/com~apple~CloudDocs/College/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Users/Adriel14/Library/Mobile Documents/com~apple~CloudDocs/College/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Users/Adriel14/Library/Mobile Documents/com~apple~CloudDocs/College/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Users/Adriel14/Library/Mobile Documents/com~apple~CloudDocs/College/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Users/Adriel14/Library/Mobile Documents/com~apple~CloudDocs/College/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Users/Adriel14/Library/Mobile Documents/com~apple~CloudDocs/College/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Users/Adriel14/Library/Mobile Documents/com~apple~CloudDocs/College/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/Adriel14/Library/Mobile Documents/com~apple~CloudDocs/College/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/Adriel14/Desktop/CPS310/FallCPS310-Labs/Martinez-Section01-lab-09-B
-d
/Users/Adriel14/Desktop/CPS310/FallCPS310-Labs/Martinez-Section01-lab-09-B/doc
-encoding
UTF-8
-charset
UTF-8
/Users/Adriel14/Desktop/CPS310/FallCPS310-Labs/Martinez-Section01-lab-09-B/Rational.java
<---- end of javadoc command ---->
Loading source file /Users/Adriel14/Desktop/CPS310/FallCPS310-Labs/Martinez-Section01-lab-09-B/Rational.java...
/Users/Adriel14/Desktop/CPS310/FallCPS310-Labs/Martinez-Section01-lab-09-B/Rational.java:72: error: ')' expected
        return new Rational(1/(numerator,denominator));
                                        ^
/Users/Adriel14/Desktop/CPS310/FallCPS310-Labs/Martinez-Section01-lab-09-B/Rational.java:72: error: ';' expected
        return new Rational(1/(numerator,denominator));
                                                     ^
2 errors
